# paper-rock-scissors

./: .gitignore  Makefile  README.md  pyproject.toml
paper_rock_scissors/: game.py  main.py  symbol.py
paper_rock_scissors/players/: cpu_player.py  human_player.py  player.py
tests/: test_game.py  test_paper_rock_scissors.py  test_player.py
