[tool.poetry]
name = "paper-rock-scissors"
version = "0.1.0"
description = "A simple Paper Rock and Scissors game for the console"
authors = ["vcabral19 <vitorcabral19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = { version = "6.3.3", extras = ["toml"]}
black = "^22.3.0"
mypy = "^0.940"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120

[mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
